fix images size on mobile phone

--- a/gallery/styles.css
+++ b/gallery/styles.css
@@ -68,7 +68,7 @@
     max-width: 600px;
   }
 
-  @media screen and (max-width: 768px) {
+  @media screen and (min-width: 768px) {
     .container {
       justify-content: space-between;
       display: flex;
